--- a/lightdm-gtk-greeter.conf
+++ b/lightdm-gtk-greeter.conf
@@ -52,7 +52,7 @@ background=/etc/lightdm/Arch_Dracula.png
 #user-background=
 theme-name=Dracula
 icon-theme-name=Dracula
-font-name=Cousine Nerd Font Mono
+font-name=Source Code Pro
 #xft-antialias=
 #xft-dpi=
 #xft-hintstyle=
